@@ -6,6 +6,7 @@ CHANGES
 
 - Added `trexio_has_group` functionality
 - Added OCaml binding
+- Added spin and energy in MOs
 
 2.2
 ---
